# fluix

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LIMITATIONS.md  README.md
.augment/rules/: default.md
.github/workflows/: pages.yml
doc/: ASSET_LOADING_GUIDE.md  DOCUMENTATION-INDEX.md  FAQ.md  QUICKSTART.md  README.md  ROADMAP.md  STANDALONE.md  STATUS.md
doc/tutorials/: 04-ICON-BACKGROUNDS.md  05-SELECT-ADVANCED.md
docs/: CHANGELOG.md  COMBOBOX_FIX_SUMMARY.md  COMBOBOX_OPTIMIZATION.md  COMBOBOX_UPDATE_SUMMARY.md  COMPONENT-REFERENCE.md  CONTRIBUTING.md  DEMO-BEST-PRACTICES.md  FAQ.md  FINAL_SUMMARY.md  ICON_FONT_GUIDE.md  ICON_IMPLEMENTATION.md  ICON_REFERENCE.md  ICON_SOLUTION_SUMMARY.md  ICON_SVG_LOADING_ISSUE.md  QUICKSTART.md  README.md  ROADMAP.md  SELECT-FONT-SIZE-FEATURE.md  SELECT-IMPROVEMENTS.md  STANDALONE.md  STATUS.md  TEXTINPUT-CURSOR-FIX.md  TUTORIAL-CREATION-SUMMARY.md  ZED_ICON_PATTERN.md  ai-components-implementation.md  fix-textarea-chinese-input.md  index.html  script.js  styles.css  text_input_selection_fix.md  textarea-chinese-input-fix.md
docs-svelte/: package-lock.json  package.json
docs-svelte/src/routes/: +page.svelte
docs/_app/: version.json
docs/pages/: index.html
docs/releases/: RELEASE_NOTES_v0.1.22.md
docs/tutorials/: 01-GETTING-STARTED.md  02-COMPONENTS.md  03-STYLING.md  05-SELECT-ADVANCED.md  README.md
examples/: ai_message_bubble_demo.rs  ai_model_selector_demo.rs  ai_prompt_input_demo.rs  breadcrumb_demo.rs  button_demo.rs  button_variants_demo.rs  checkbox_checked_demo.rs  checkbox_default_demo.rs  checkbox_demo.rs  checkbox_disabled_demo.rs  checkbox_group_demo.rs  checkbox_sizes_demo.rs  color_test.rs  combobox_default_demo.rs  combobox_demo.rs  combobox_disabled_demo.rs  combobox_preselected_demo.rs  combobox_test.rs  icon_all_demo.rs  icon_colors_demo.rs  icon_default_demo.rs  icon_demo.rs  icon_send_demo.rs  icon_sizes_demo.rs  model_selector_clear_demo.rs  model_selector_clear_flat_demo.rs  model_selector_demo.rs  model_selector_width_demo.rs  prompt_demo.rs  radio_group_demo.rs  select_alignment_demo.rs  select_bg_color_demo.rs  select_clean_demo.rs  select_compact_demo.rs  select_default_demo.rs  select_demo.rs  select_disabled_demo.rs  select_dropdown_direction_demo.rs  select_font_size_demo.rs  select_grouped_demo.rs  (+17 more)
script/: release.sh
src/: assets.rs  lib.rs  theme.rs
src/ai/: message.rs  mod.rs  model_selector.rs  prompt.rs
src/ai/display/: message_bubble.rs  mod.rs
src/ai/feedback/: mod.rs
src/ai/input/: mod.rs  prompt_input.rs
src/ai/layout/: mod.rs
src/ai/selection/: mod.rs  model_selector.rs
src/components/: mod.rs
src/utils/: colors.rs  mod.rs
tests/: test.sh
websites/: README.md  package-lock.json  package.json  svelte.config.js
websites/src/: app.css
(+69 files in other folders)
