[package]
name = "fluix"
version = "0.1.8"
edition = "2021"
authors = ["Fluix Contributors"]
description = "A comprehensive UI component library for GPUI 0.2 - Modern, performant, and type-safe"
license = "MIT"
repository = "https://github.com/lipish/fluix"
homepage = "https://github.com/lipish/fluix"
keywords = ["ui", "gui", "gpui", "components", "widgets"]
categories = ["gui", "graphics"]
readme = "README.md"

[dependencies]
gpui = "0.2"
anyhow = "1.0"
rust-embed = "8"

[[example]]
name = "text_input_demo"
path = "examples/text_input_demo.rs"

[[example]]
name = "button_demo"
path = "examples/button_demo.rs"

[[example]]
name = "icon_demo"
path = "examples/icon_demo.rs"

[dev-dependencies]
env_logger = "0.11"
