[package]
name = "fluix"
version = "0.1.22"
edition = "2021"
authors = ["Fluix Contributors"]
description = "Rust UI components for GPUI"
license = "MIT"
repository = "https://github.com/lipish/fluix"
homepage = "https://github.com/lipish/fluix"
keywords = ["ui", "gui", "gpui", "components", "widgets"]
categories = ["gui", "graphics"]
readme = "README.md"

[dependencies]
gpui = "0.2"
anyhow = "1.0"
rust-embed = "8"

[[example]]
name = "text_input_demo"
path = "examples/text_input_demo.rs"

[[example]]
name = "button_demo"
path = "examples/button_demo.rs"

[[example]]
name = "icon_demo"
path = "examples/icon_demo.rs"

[[example]]
name = "tabs_demo"
path = "examples/tabs_demo.rs"

[[example]]
name = "checkbox_demo"
path = "examples/checkbox_demo.rs"

[[example]]
name = "checkbox_group_demo"
path = "examples/checkbox_group_demo.rs"

[[example]]
name = "combobox_demo"
path = "examples/combobox_demo.rs"

[[example]]
name = "breadcrumb_demo"
path = "examples/breadcrumb_demo.rs"

[[example]]
name = "radio_group_demo"
path = "examples/radio_group_demo.rs"

[dev-dependencies]
env_logger = "0.11"
