[package]
name = "fluix"
version = "0.1.25"
edition = "2021"
authors = ["Fluix Contributors"]
description = "Rust UI components for GPUI"
license = "MIT"
repository = "https://github.com/lipish/fluix"
homepage = "https://github.com/lipish/fluix"
keywords = ["ui", "gui", "gpui", "components", "widgets"]
categories = ["gui", "graphics"]
readme = "README.md"

[dependencies]
gpui = "0.2"
anyhow = "1.0"
rust-embed = "8"
arboard = "3"
# AI components dependencies
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
llm-link = "0.3.4"

[[example]]
name = "model_selector_demo"
path = "examples/model_selector_demo.rs"

[[example]]
name = "prompt_demo"
path = "examples/prompt_demo.rs"

[dev-dependencies]
env_logger = "0.11"
